--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -30,7 +30,7 @@
     <main class="login">
         <h2 class="login-title">Log in</h2>
         <div class="form">
-          <form class="connection" netlify>
+          <form class="connection"  method="POST" data-netlify="true">
             <label for="email">E-mail</label>
             <input type="email" name="email" id="email" />
             <label for="password">Mot de passe</label>
